# edm

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
alembic/: env.py
alembic/versions/: 2023_07_26_21_46_first_commit.py  2023_07_30_16_05_create_document_codes_and_documents_.py  2023_07_31_19_56_create_document_codes_and_documents_.py  2023_08_02_19_57_create_document_codes_and_documents_.py  2023_08_07_19_18_create_material_categories_and_.py
src/: main.py
src/auth/: models.py  router.py  schemas.py
src/core/: base.py  config.py  database.py
src/documents/: models.py  repository.py  router.py  schemas.py
src/materials/: models.py  repository.py  router.py  schemas.py
